--- a/index.html
+++ b/index.html
@@ -1,93 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML Intro</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HTML Intro</title>
+</head>
+
+<body>
+  <header>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1>Andrea Cseri</h1>
+      <p>I earned a computer science degree at the university of washington. I briefly worked for my dad's small start
+        up company on an application. I then got a job working IT for Crane Aerospace and Electronics. </p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li>
+          <a href="www.linkedin.com/in/andrea-cseri-35b423216">linked in</a>
+        </li>
+        <li>
+          <a href="https://truecoders.io/">TrueCoders</a>
+        </li>
+        <li>
+          <a href="https://www.google.com/">Google</a>
+        </li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="./images/hawaii.jpg" alt="Hawaii">
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+        <strong>point</strong>,"
+        <span>Bredon</span> said grandly, "is to <u>play</u> a <em>beautiful </em>game." He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        would I want to win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
 
     <div id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
+      <header>
+        <nav>
+          <ul>
+            <li>
               <a href="/">Home</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/about">About</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-      <div>
-        <div>
+
+      <main>
+        <section>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
+        </section>
+        <article>
+          <section>
             <h2>Sub Heading</h2>
-            <div>
-              <p>Lorem ipsum...</p>
-            </div>
-          </div>
-          <div>
+            <p>Lorem ipsum...</p>
+          </section>
+          <section>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
             <div>
               <h3>Another Sub Heading</h3>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-        </div>
-	</div>
+          </section>
+        </article>
+      </main>
 
-      <div>
-        <div>
-          <div>
-            <span>
+      <footer>
+        <nav>
+          <ul>
+            <li>
               <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
+            </li>
+          </ul>
+        </nav>
 
         <div>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
         </div>
-      </div>
-    </div>
-	
-  </body>
+      </footer>
+</body>
+
 </html>
